homework8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpServer
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 18023
  selector:
    app: httpServer
