homework8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpServer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: httpserver.ji024cqx.com
      http:
        paths:
          - backend:
              service:
                name: httpServer
                port:
                  number: 80
            path: /
            pathType: Prefix
